#pragma once

enum class ReservationStatus
{
    Requested,
    Pending,
    Confirmed,
    CheckedIn,
    Canceled,
    Abandoned
};